/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.infra.lab;

import "src/devtools/mobileharness/api/model/proto/job.proto";
import "src/devtools/mobileharness/api/model/proto/test.proto";

option java_package = "com.google.devtools.mobileharness.infra.lab.proto";
option java_outer_classname = "File";

// A test file in a MH lab.
// This message is for MH lab only (lab server / test engine).
message TestFileUnit {
  mobileharness.api.model.TestLocator test_locator = 1;
  string tag = 2;
  string local_path = 3;
  string original_path = 4;
  string checksum = 5;
}

// A job file in a MH lab.
// This message is for MH lab only (lab server / test engine).
message JobFileUnit {
  mobileharness.api.model.JobLocator job_locator = 1;
  string tag = 2;
  string local_path = 3;
  string original_path = 4;
  string checksum = 5;
}

// This message is for MH lab only (lab server / test engine).
message JobOrTestFileUnit {
  oneof job_or_test {
    JobFileUnit job_file_unit = 1;
    TestFileUnit test_file_unit = 2;
  }
}

message JobFilesPackage {
  repeated JobOrTestFileUnit job_or_test_files = 1;
}
